--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -9,7 +9,7 @@
 ul a:active {
   background-color: #198754 !important;
 }
-.searchInput:focus {
+.greenShadow:focus {
   border-color: #198754 !important;
   box-shadow: 0 0 0 0.25rem rgba(10, 53, 33, 0.25) !important;
 }
